# nesbrasa-gtk

./: .buildconfig  .gitignore  .gitmodules  README.md  meson.build  nesbrasa-gtk.code-workspace  nesbrasa.nesbrasa.emu.yaml  win32_cross.txt
data/: meson.build  nesbrasa.nesbrasa.emu.appdata.xml.in  nesbrasa.nesbrasa.emu.desktop.in  nesbrasa.nesbrasa.emu.gschema.xml
po/: POTFILES  meson.build
src/: arquivo.cpp  arquivo.hpp  janela_principal.cpp  janela_principal.hpp  janela_principal.ui  janela_principal.ui~  main.cpp  meson.build  nesbrasa-gtk.gresource.xml  sprites.cpp  sprites.hpp
